criando sections variados

--- a/index.html
+++ b/index.html
@@ -24,8 +24,17 @@
         <P>
             a tag "p" é utilizada como paragráfo 
         </P>
-
+    
     </header>
+    <section id="servicos">
+        <h2>SERVIÇOS</h2>
+        <p>section é uma seção generica de documento ou app.</p>
+
+    </section>
+    <section id="clientes">
+        <h2>CLIENTES</h2>
+        <p>criando variados tipos de section</p>
+    </section>
 
     <footer>
         <p> a tag footer é utilizada como rodapé</p>
