fazendo reparos no title, crindo pasta img, e apresentando imagem

--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
     <title>Minha página agora</title>
-=======
-    <title>Minha página</title>
->>>>>>> 15722272fe3a68f5419fa58d381ed43c58b90d4a
 </head>
 <body>
     <nav>
@@ -29,6 +25,7 @@
     <section id="servicos">
         <h2>SERVIÇOS</h2>
         <p>section é uma seção generica de documento ou app.</p>
+        <img src="img/serviços.jpeg" width="400px">
 
     </section>
     <section id="clientes">
