--- a/index.html
+++ b/index.html
@@ -25,12 +25,19 @@
     <section id="servicos">
         <h2>SERVIÇOS</h2>
         <p>section é uma seção generica de documento ou app.</p>
-        <img src="img/serviços.jpeg" width="400px">
-
+        <div>
+        <img src="img/serviços.jpeg" width="300px">
+        </div>
+        <div>
+            <img src="img/time.jpg" width="300px">
+        </div>
     </section>
     <section id="clientes">
         <h2>CLIENTES</h2>
         <p>criando variados tipos de section</p>
+        <div>
+            <img src="img/clientes.jpg" width="300px">
+        </div>
     </section>
 
     <footer>
