reparos no hiper lik

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 <body>
     <nav>
         <ul>
-            <li>News</li>
-            <li>Link</li>
-            <li>Pratica</li>
+            <li>NEWS</li>
+            <li>LINK</li>
+            <li>PRATICAS</li>
+            <li><a href="#clientes">CLIENTES</a></li>
+            <LI><a href="#servicos">SERVIÇOS</a> </LI>
 
             
         </ul>
