criando nova section parceiros e add imagens dos parceiros

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <body>
     <nav>
         <ul>
-            <li>NEWS</li>
-            <li>LINK</li>
-            <li>PRATICAS</li>
+            <li><a href="#parceiros">PARCEIROS</a></li>
+            <li><a href="#contatos">CONTATOS</a></li>
             <li><a href="#clientes">CLIENTES</a></li>
             <LI><a href="#servicos">SERVIÇOS</a> </LI>
 
@@ -39,6 +38,16 @@
         <p>criando variados tipos de section</p>
         <div>
             <img src="img/clientes.jpg" width="300px">
+        </div>
+    </section>
+    <section id="parceiros">
+        <h2>PARCEIROS</h2>
+        <p>Nossos parceiros estão sempre nos apoiando e de portas abertas</p>
+        <div>
+        <img src="img/smart-fit parceiro1.jpg" width="300px">
+        </div>
+        <div>
+            <img src="img/parceiro joão.jpg" width="300px">
         </div>
     </section>
 
