--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <nav>
         <ul>
             <li><a href="#parceiros">PARCEIROS</a></li>
-            <li><a href="#contatos">CONTATOS</a></li>
+            <li><a href="#time">TIME</a></li>
             <li><a href="#clientes">CLIENTES</a></li>
             <LI><a href="#servicos">SERVIÇOS</a> </LI>
 
@@ -50,7 +50,13 @@
             <img src="img/parceiro joão.jpg" width="300px">
         </div>
     </section>
-
+    <section id="time">
+        <h2>TIME</h2>
+        <p>Esse é o nosso time de representantes</p>
+        <div>
+            <img src="img/time de representantes.jpg" width="350px">
+        </div>
+    </section>
     <footer>
         <p> a tag footer é utilizada como rodapé</p>
     </footer>
