--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
             <li><a href="#parceiros">PARCEIROS</a></li>
             <li><a href="#time">TIME</a></li>
             <li><a href="#clientes">CLIENTES</a></li>
-            <LI><a href="#servicos">SERVIÇOS</a> </LI>
+            <li><a href="#servicos">SERVIÇOS</a> </li>
+            <li><a href="#contato">CONTATOS</a></li>
 
             
         </ul>
@@ -52,10 +53,19 @@
     </section>
     <section id="time">
         <h2>TIME</h2>
-        <p>Esse é o nosso time de representantes</p>
+        <p>Nosso time é sério</p>
         <div>
-            <img src="img/time de representantes.jpg" width="350px">
+            <img src="" width="350px">
         </div>
+    </section>
+    <section id="contato">
+        <h2>CONTATOS</h2>
+        <p>Entre em contato com nossa equipe</p>
+        <div>
+            <img src="img/e-mail.jpg" width="30px">
+            <p><contato@hotmail class="com"></contato@hotmail></p>
+        </div>
+        
     </section>
     <footer>
         <p> a tag footer é utilizada como rodapé</p>
