corrigindo erro do e-mail

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p>Entre em contato com nossa equipe</p>
         <div>
             <img src="img/e-mail.jpg" width="30px">
-            <p><contato@hotmail class="com"></contato@hotmail></p>
+            <p>contato@hotmail.com</p>
         </div>
         
     </section>
