--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
         <p>Entre em contato com nossa equipe</p>
         <div>
             <img src="img/e-mail.jpg" width="30px">
-            <p><a href="mailto:">contato@hotmail.com</a></p>
+            <p><a href="mailto:contato@hotmail.com">contato@hotmail.com</a></p>
+        </div>
+        <div>
+            <img src="img/telefone.png" width="30px">
+            <p><a href="tel:11940215166">(11)94021-5166</a></p>
         </div>
         
     </section>
