--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
         <h2>PARCEIROS</h2>
         <p>Nossos parceiros estão sempre nos apoiando e de portas abertas</p>
         <div>
-        <img src="img/smart-fit parceiro1.jpg" width="300px">
+         <a href="https://www.smartfit.com.br/"><img src="img/smart-fit parceiro1.jpg" width="300px"></a>
         </div>
         <div>
-            <img src="img/parceiro joão.jpg" width="300px">
+            <a href="https://www.instagram.com/joaodoveneno/"><img src="img/parceiro joão.jpg" width="300px">
+            </a>   
         </div>
     </section>
     <section id="time">
