add class nas tags img e contatos

--- a/index.html
+++ b/index.html
@@ -29,27 +29,27 @@
         <h2>SERVIÇOS</h2>
         <p>section é uma seção generica de documento ou app.</p>
         <div>
-        <img src="img/serviços.jpeg" width="300px">
+        <img src="img/serviços.jpeg" class="img_padrao">
         </div>
         <div>
-            <img src="img/time.jpg" width="300px">
+            <img src="img/time.jpg" class="img_padrao">
         </div>
     </section>
     <section id="clientes">
         <h2>CLIENTES</h2>
         <p>criando variados tipos de section</p>
         <div>
-            <img src="img/clientes.jpg" width="300px">
+            <img src="img/clientes.jpg" width="300px" class="img_padrao">
         </div>
     </section>
     <section id="parceiros">
         <h2>PARCEIROS</h2>
         <p>Nossos parceiros estão sempre nos apoiando e de portas abertas</p>
         <div>
-         <a href="https://www.smartfit.com.br/" target="_blank"><img src="img/smart-fit parceiro1.jpg" width="300px"></a>
+         <a href="https://www.smartfit.com.br/" target="_blank"><img src="img/smart-fit parceiro1.jpg" class="logo"></a>
         </div>
         <div>
-            <a href="https://www.instagram.com/joaodoveneno/" target="_blank"><img src="img/parceiro joão.jpg" width="300px">
+            <a href="https://www.instagram.com/joaodoveneno/" target="_blank"><img src="img/parceiro joão.jpg" class="logo">
             </a>   
         </div>
     </section>
